[workspace]
members = ["poe", "makro", "overlay", "pors", "discovery"]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
panic = "abort"
debug = true

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
color-eyre = "0.6"
arrayvec = "0.7"
criterion = "0.4"
serde = { version = "1", features = ["derive"] }

