[package]
name = "overlay"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = "1.8.0"
makro = { path = "../makro" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
path = "./src/lib.rs"


# [[bin]]
# name = "fullscreen"
# path =
