[package]
name = "poe"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
makro = { path = "../makro" }
config = { path = "../config" }
regex = { version = "1" }
once_cell = { version = "1" }
arrayvec = { workspace = true }
# tokio = { version = "1", features = ["rt", "time", "macros"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "sets"
harness = false

[[bench]]
name = "wm_name"
harness = false
